--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,16 @@ a {
   color: #00B7FF;
 } */
 
+/*
+  ###############################################
+    ###############################################
+                    Home Page
+      ###############################################
+  ###############################################
+
+
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,600');
 
 html,*{
