--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -3,9 +3,11 @@
   <head>
     <title><%= header %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/styleseets/Grid.css">
   </head>
   <body>
     <h1><%= header %></h1>
+    <!--
     <p>Welcome to <% for(var i=0; i< menu.length; i++){ %>
       <ul>
         <li>category : <%= menu[i].category %></li>
@@ -13,5 +15,6 @@
         <li style="background-color:coral"> Price <%= menu[i].food_price %> </li>
       </ul>
     <% } %></p>
+    -->
   </body>
 </html>
