--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -3,10 +3,31 @@
   <head>
     <title><%= header %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="/styleseets/Grid.css">
   </head>
   <body>
-    <h1><%= header %></h1>
+    <div class="container img-menu">
+      <img src="/images/Menu-image.jpg" alt="">
+      <div class="text-block">
+        <h1>Lunch/dinner</h1>
+      </div>
+    </div>
+
+    <section class="menus-section">
+      <h2>APPEITZERS</h2>
+    <div class="grid">
+      <% for(var i=0; i<menu.length; i++){ %>
+          <%if(menu[i].category === 'APPEITZERS'){%>
+            <div class="col span-1-of-2 food_menu">
+               <p class="food_name"><%= menu[i].food_name %></p>
+                <p class="food_desc"><%= menu[i].food_desc %></p>
+                <p class="food_price">$<%= menu[i].food_price %></p>
+              </div>
+                <% } %>
+        <%}%>
+  
+    </div>      
+    </section>
+    
     <!--
     <p>Welcome to <% for(var i=0; i< menu.length; i++){ %>
       <ul>
