--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -65,6 +65,30 @@
       
         </div>      
         </section>
+
+        <section class="menus-section">
+            <div class="food_details">
+                <h2>Stir-Fried</h2>
+                <p>​Served with steamed rice. <br>   
+                    ​Substitute brown rice add $1 <br>
+                    Choice of Chicken, Tofu,  Vegetable $11,   Beef or Pork $12, <br>
+                    Shrimp $14,  Seafood $16
+                    </p>
+                  </div>
+                  <div class="grid">
+            <% for(var i=0; i<menu.length; i++){ %>
+                <%if(menu[i].category === 'STIR-FRIED'){%>
+                  <div class="col span-1-of-2 food_menu">
+                     <p class="food_name"><%= menu[i].food_name %></p>
+                      <p class="food_desc"><%= menu[i].food_desc %></p>
+                      <p class="food_price"><%= menu[i].food_price %></p>
+                    </div>
+                      <% } %>
+              <%}%>
+        
+          </div>      
+          </section>
+  
     
     
     <!--
