--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -111,7 +111,22 @@
             </div>      
             </section>
     
-    
+            <section class="menus-section">
+                  <h2>Noodle Soup</h2>
+                <div class="grid">
+                  <% for(var i=0; i<menu.length; i++){ %>
+                      <%if(menu[i].category === 'NOODLES-SOUP'){%>
+                        <div class="col span-1-of-2 food_menu">
+                           <p class="food_name"><%= menu[i].food_name %></p>
+                            <p class="food_desc"><%= menu[i].food_desc %></p>
+                            <p class="food_price"><%= menu[i].food_price %></p>
+                          </div>
+                            <% } %>
+                    <%}%>
+          
+                </div>
+                <p class="hot-lvl">Spice level  : *mild,  **medium,  ***hot, <span> ****very hot</span></p>
+          
     
     <!--
     <p>Welcome to <% for(var i=0; i< menu.length; i++){ %>
