Add Fried-rice section

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -151,7 +151,29 @@
                   </div>      
                   </section>
         
-    
+                  <section class="menus-section">
+                      <div class="food_details">
+                          <h2>Fried Rice</h2>
+                          <p>​Choice of Chicken, Tofu, Vegetable $11, Beef or Pork $12, <br>
+                              Shrimp $14,  Seafood $16
+                              
+                              </p>
+                            </div>
+                      <div class="grid">
+                      <% for(var i=0; i<menu.length; i++){ %>
+                          <%if(menu[i].category === 'FRIED-RICE'){%>
+                            <div class="col span-1-of-2 food_menu">
+                               <p class="food_name"><%= menu[i].food_name %></p>
+                                <p class="food_desc"><%= menu[i].food_desc %></p>
+                                <p class="food_price"><%= menu[i].food_price %></p>
+                              </div>
+                                <% } %>
+                        <%}%>
+                  
+                    </div>      
+                    </section>
+
+        
     <!--
     <p>Welcome to <% for(var i=0; i< menu.length; i++){ %>
       <ul>
