--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -191,7 +191,22 @@
                     
                       </div>      
                       </section>
-  
+
+                      <section class="menus-section">
+                          <h2>Side</h2>
+                        <div class="grid">
+                          <% for(var i=0; i<menu.length; i++){ %>
+                              <%if(menu[i].category === 'SIDE'){%>
+                                <div class="col span-1-of-2 food_menu">
+                                   <p class="food_name"><%= menu[i].food_name %></p>
+                                    <p class="food_desc"><%= menu[i].food_desc %></p>
+                                    <p class="food_price">$<%= menu[i].food_price %></p>
+                                  </div>
+                                    <% } %>
+                            <%}%>
+                  
+                        </div>
+                        </section>
         
     <!--
     <p>Welcome to <% for(var i=0; i< menu.length; i++){ %>
