Add Dessert section

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -560,6 +560,14 @@ footer p {
 .hot-lvl span{
     color: rgb(255, 0, 8);
 }
+
+
+
+/* Dessert section */
+
+.desserts{
+    margin-top: 15em;
+}
 /*
   ###############################################
     ###############################################
