--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -207,6 +207,32 @@
                   
                         </div>
                         </section>
+
+                        <div class="container img-menu desserts">
+                            <img src="/images/Dessert-image.jpg" alt="">
+                            <div class="text-block">
+                              <h1>Dessert/Drinks</h1>
+                            </div>
+                          </div>
+
+                          
+                          <section class="menus-section">
+                              <h2>Dessert</h2>
+                            <div class="grid">
+                              <% for(var i=0; i<menu.length; i++){ %>
+                                  <%if(menu[i].category === 'DESSERT'){%>
+                                    <div class="col span-1-of-2 food_menu">
+                                       <p class="food_name"><%= menu[i].food_name %></p>
+                                        <p class="food_desc"><%= menu[i].food_desc %></p>
+                                        <p class="food_price">$<%= menu[i].food_price %></p>
+                                      </div>
+                                        <% } %>
+                                <%}%>
+                      
+                            </div>
+                            </section>
+                            
+        
         
     <!--
     <p>Welcome to <% for(var i=0; i< menu.length; i++){ %>
