Add Wine section

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -263,6 +263,28 @@
                           
                                 </div>
                                 </section>
+
+                                <section class="menus-section">
+                                    <div class="food_details">
+                                        <h2>Wine</h2>
+                                        <p>​ All house wine $6 <br>
+                                            Chardonnay, Cabernet Sauvignon, Merot, Resling                                            
+                                            </p>
+                                          </div>
+                                                  <div class="grid">
+                                    <% for(var i=0; i<menu.length; i++){ %>
+                                        <%if(menu[i].category === 'WINE'){%>
+                                          <div class="col span-1-of-2 food_menu">
+                                             <p class="food_name"><%= menu[i].food_name %></p>
+                                              <p class="food_desc"><%= menu[i].food_desc %></p>
+                                              <p class="food_price">$<%= menu[i].food_price %></p>
+                                            </div>
+                                              <% } %>
+                                      <%}%>
+                            
+                                  </div>
+                                  </section>
+  
   
   
         
