--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= header %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </head>
   <body>
     <div class="container img-menu">
@@ -284,6 +285,39 @@
                             
                                   </div>
                                   </section>
+    <!-- FOOTER -->
+    <footer>
+        <div class="row">
+          <div class="col span-1-of-2">
+            <ul class="footer-nav">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Bar</a></li>
+              <li><a href="#">Where To Find Us?</a></li>
+            </ul>
+          </div>
+    
+          <div class="col span-1-of-2">
+            <ul class="social-links">
+              <li><a href="https://www.facebook.com" target="_blank">
+                  <ion-icon name="logo-facebook"></ion-icon>
+                </a></li>
+              <li><a href="#">
+                  <ion-icon name="logo-twitter"></ion-icon>
+                </a></li>
+              <li><a href="#">
+                  <ion-icon name="logo-googleplus"></ion-icon>
+                </a></li>
+              <li><a href="#">
+                  <ion-icon name="logo-instagram"></ion-icon>
+                </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <p>Copyright &copy; 2018 by Wild Tiger. All rights reserved.</p>
+        </div>
+      </footer>
   
   
   
