Create menu.css file

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= header %></title>
+    <link rel='stylesheet' href='/stylesheets/menu.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </head>
