--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -64,7 +64,7 @@
       <%}%>
 
     </div>
-    <p class="hot-lvl">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
+    <p class="notes-menu">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
 
   </section>
 
