Edit href links

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -167,7 +167,7 @@
       <%}%>
 
     </div>
-    <p class="hot-lvl">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
+    <p class="notes-menu">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
 
 
     <section class="menus-section">
@@ -379,10 +379,10 @@
       <div class="row">
         <div class="col span-1-of-2">
           <ul class="footer-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Bar</a></li>
-            <li><a href="#">Where To Find Us?</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/menu">Menu</a></li>
+            <li><a href="../bar">Bar</a></li>
+            <li><a href="/">Where To Find Us?</a></li>
           </ul>
         </div>
 
