--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -78,10 +78,10 @@
         <div class="row">
             <div class="col span-1-of-2">
                 <ul class="footer-nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Bar</a></li>
-                    <li><a href="#">Where To Find Us?</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="../menu">Menu</a></li>
+                    <li><a href="/bar">Bar</a></li>
+                    <li><a href="/">Where To Find Us?</a></li>
                 </ul>
             </div>
 
