--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,8 @@ header{
     display: none;
     
 }
+
+/* Main Nav*/
 .header-top nav ul{
     display: -webkit-box;
     display: -ms-flexbox;
@@ -74,10 +76,10 @@ header{
         justify-content: space-around;
 
 }
+
 .wild-tiger-logo{
     display: inline-block;
     margin-right: 0;
-    background-image: url(../images/WildTiger-Logo.png);
     background-repeat: no-repeat;
     background-size: 461px;
     width: 461px;
@@ -112,14 +114,53 @@ header{
     color: #fff;
 }
 
+/*Sticky Nav*/
+.sticky{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.98);
+    z-index: 99999999;
+    box-shadow: 0 2px 2px #efefef;
+}
+.sticky .nav-ul{
+    height: 90px;
+}
+.sticky li a{
+    color: #333;
+}
+.sticky li:not(.wild-logo-li-black){
+    margin-top: 0px;
+}
 .hero-text{
+    display: inline-block;
     margin-top: 11em;
     margin-left: 60px;
 }
 
+.wild-tiger-logo-white { background-image: url(../images/WildTiger-Logo.png); }
+.sticky .wild-logo-li-white{ display: none;}
+
+.wild-tiger-logo-black{ display: none;}
+.sticky .wild-tiger-logo-black{
+    display: block;
+    background-image: url(../images/WildTiger-logo-black.png);
+    background-size: 400px;
+}
+
+.sticky .wild-logo-li-black{
+    order: -1;
+}
+
+
+
+
+
 .hero-text .btn-orange{
     margin-top: 4em;
 }
+
 
 /* Button's */
 
@@ -962,3 +1003,10 @@ footer p {
       margin-top: 5em;
   }
 }
+
+
+
+
+
+
+/* ANIMATIONS */
